--- a/NativeSpark/src/main/resources/templates/home.html
+++ b/NativeSpark/src/main/resources/templates/home.html
@@ -15,14 +15,14 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: auto;*/
+        /*}*/
 
         .listing-card {
             background: #fff;
@@ -170,9 +170,12 @@
     </div>
 </div>
 
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
+
 <script>
     function showSection(section, clickedButton) {
         // Hide all sections
