--- a/NativeSpark/src/main/resources/templates/purchase.html
+++ b/NativeSpark/src/main/resources/templates/purchase.html
@@ -161,9 +161,11 @@
     </div>
 </div>
 
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
 
 </body>
 </html>
