--- a/NativeSpark/src/main/resources/templates/cart-summary.html
+++ b/NativeSpark/src/main/resources/templates/cart-summary.html
@@ -16,14 +16,14 @@
             background-color: #f4f4f9;
         }
 
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: auto;*/
+        /*}*/
 
         button span {
             transition: color 0.3s ease;
@@ -98,9 +98,12 @@
     </div>
 </div>
 
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
+
 </body>
 </html>
 
