--- a/NativeSpark/src/main/resources/templates/cart.html
+++ b/NativeSpark/src/main/resources/templates/cart.html
@@ -15,14 +15,14 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: auto;*/
+        /*}*/
         button span {
             transition: color 0.3s ease;
             font-size: 1.5rem;
@@ -91,9 +91,11 @@
 </div>
 
 
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
 
 </body>
 </html>
