--- a/NativeSpark/src/main/resources/templates/footer.html
+++ b/NativeSpark/src/main/resources/templates/footer.html
@@ -10,7 +10,7 @@
       padding: 20px 0;
       text-align: center;
       font-size: 1rem;
-      margin-top: auto;
+        margin-top: 20px;
     }
   </style>
 </head>
