--- a/NativeSpark/src/main/resources/templates/product-details.html
+++ b/NativeSpark/src/main/resources/templates/product-details.html
@@ -14,14 +14,14 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: auto;*/
+        /*}*/
 
         .product-container {
             display: flex;
@@ -133,10 +133,12 @@
     </div>
 </div>
 
-<!-- ✅ Footer -->
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--&lt;!&ndash; ✅ Footer &ndash;&gt;-->
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
 
 <script>
     function showToast(message) {
