--- a/NativeSpark/src/main/resources/templates/request_custom_amount.html
+++ b/NativeSpark/src/main/resources/templates/request_custom_amount.html
@@ -25,14 +25,14 @@
             letter-spacing: 1px;
         }
 
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: auto;*/
+        /*}*/
 
         .product-container {
             display: flex;
@@ -144,10 +144,12 @@
     </div>
 </div>
 
-<!-- ✅ Footer -->
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--&lt;!&ndash; ✅ Footer &ndash;&gt;-->
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
