--- a/NativeSpark/src/main/resources/templates/welcome.html
+++ b/NativeSpark/src/main/resources/templates/welcome.html
@@ -85,15 +85,15 @@
             object-fit: cover;
         }
 
-        /* Footer */
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: 20px;
-        }
+        /*!* Footer *!*/
+        /*.footer-custom {*/
+        /*    background-color: #014017;*/
+        /*    color: white;*/
+        /*    padding: 20px 0;*/
+        /*    text-align: center;*/
+        /*    font-size: 1rem;*/
+        /*    margin-top: 20px;*/
+        /*}*/
 
         /* Buttons */
         .btn-primary {
@@ -205,9 +205,11 @@
         </div>
     </div>
 </div>
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<!--<footer class="footer-custom">-->
+<!--    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>-->
+<!--</footer>-->
+
+<div th:replace="~{footer}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
