fixed_qty_update_after_purchase

--- a/NativeSpark/src/main/resources/templates/cart-success.html
+++ b/NativeSpark/src/main/resources/templates/cart-success.html
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header text-center bg-success text-white">
-                    <h4>Order Successful!</h4>
+                    <h2 class="text-success">🎉 Purchase Successful!</h2>
                     <p>Your order number is: <strong th:text="${orderNumber}"></strong></p>
                 </div>
                 <div class="card-body">
