--- a/NativeSpark/src/main/resources/templates/cart.html
+++ b/NativeSpark/src/main/resources/templates/cart.html
@@ -171,6 +171,8 @@
 <!--Navbar-->
 <div th:replace="~{navbar}"></div>
 
+<main class="flex-grow-1">
+
 <!--Cart content-->
 <div class="container mt-5">
     <h2 class="text-center">Your Cart</h2>
@@ -229,6 +231,8 @@
         <p class="text-muted fs-5">Your cart is empty.</p>
     </div>
 </div>
+
+</main>
 
 <!--Footer-->
 <div th:replace="~{footer}"></div>
