--- a/NativeSpark/src/main/resources/templates/home.html
+++ b/NativeSpark/src/main/resources/templates/home.html
@@ -52,6 +52,8 @@
 
 <div th:replace="~{navbar}"></div>
 
+<main class="flex-grow-1">
+
 <div class="container mt-5">
     <h2 class="text-center">Marketplace</h2>
 
@@ -162,6 +164,8 @@
         </div>
     </div>
 </div>
+
+</main>
 
 <div th:replace="~{footer}"></div>
 
