--- a/NativeSpark/src/main/resources/templates/my_orders.html
+++ b/NativeSpark/src/main/resources/templates/my_orders.html
@@ -15,7 +15,10 @@
     </style>
 </head>
 <body>
+
 <div th:replace="~{navbar}"></div>
+
+<main class="flex-grow-1">
 
 <div class="container mt-5">
     <h2 class="mb-4">My Orders</h2>
@@ -42,6 +45,8 @@
         </div>
     </div>
 </div>
+
+</main>
 
 <div th:replace="~{footer}"></div>
 
