--- a/NativeSpark/src/main/resources/templates/navbar.html
+++ b/NativeSpark/src/main/resources/templates/navbar.html
@@ -74,11 +74,14 @@
             <li sec:authorize="hasAuthority('ROLE_ENTREPRENEUR')">
               <a class="dropdown-item" th:href="@{/buyers}">Buyers of My Products</a>
             </li>
+            <li sec:authorize="hasAuthority('ROLE_ENTREPRENEUR')">
+              <a class="dropdown-item" th:href="@{/requests}">Requests</a>
+            </li>
             <li th:if="${#authentication.authorities.?[authority == 'ROLE_BUSINESS' or authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
               <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
             </li>
+            <li><a class="dropdown-item" th:href="@{/request-custom/my_requests}">My Requests</a></li>
             <li><a class="dropdown-item" th:href="@{/saved}">Saved</a></li>
-            <li><a class="dropdown-item" href="#">Coming Soon...</a></li>
           </ul>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/cart}">Cart</a>
