--- a/NativeSpark/src/main/resources/templates/navbar.html
+++ b/NativeSpark/src/main/resources/templates/navbar.html
@@ -75,7 +75,7 @@
               <a class="dropdown-item" th:href="@{/buyers}">Buyers of My Products</a>
             </li>
             <li sec:authorize="hasAuthority('ROLE_ENTREPRENEUR')">
-              <a class="dropdown-item" th:href="@{/requests}">Requests</a>
+              <a class="dropdown-item" th:href="@{/request-custom/requests}">Requests</a>
             </li>
             <li th:if="${#authentication.authorities.?[authority == 'ROLE_BUSINESS' or authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
               <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
